bug fix: dependsOn